part of final tumor volume, beginning of cap data

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,27 +269,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "g989    13\n",
-       "a251    10\n",
-       "a203    10\n",
-       "l471    10\n",
-       "z578    10\n",
+       "g497    10\n",
+       "s337    10\n",
+       "l509    10\n",
+       "g791    10\n",
        "        ..\n",
-       "x336     1\n",
-       "f932     1\n",
+       "n482     1\n",
+       "x226     1\n",
+       "b447     1\n",
        "l872     1\n",
-       "v199     1\n",
-       "u153     1\n",
+       "o848     1\n",
        "Name: Mouse ID, Length: 249, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "g989               62.570880                 2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 111,
    "metadata": {
     "scrolled": false
    },
@@ -762,7 +762,7 @@
        "[1880 rows x 8 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "Zoniferol                            6.966589          0.516398  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
        "Text(0, 0.5, 'Total Mice')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
        "Text(0, 0.5, 'Total Mice')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1127,16 +1127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Male and Female Mice Totals'"
+       "<function matplotlib.pyplot.title(label, fontdict=None, loc='center', pad=None, **kwargs)>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1170,17 +1170,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>45</td>\n",
+       "      <td>k403</td>\n",
+       "      <td>22.050126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>45</td>\n",
+       "      <td>s185</td>\n",
+       "      <td>23.343598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>45</td>\n",
+       "      <td>x401</td>\n",
+       "      <td>28.484033</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>m601</td>\n",
+       "      <td>28.430964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>45</td>\n",
+       "      <td>g791</td>\n",
+       "      <td>29.128472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39991</th>\n",
+       "      <td>20</td>\n",
+       "      <td>y769</td>\n",
+       "      <td>55.025724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39992</th>\n",
+       "      <td>20</td>\n",
+       "      <td>y865</td>\n",
+       "      <td>52.361982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39993</th>\n",
+       "      <td>20</td>\n",
+       "      <td>z581</td>\n",
+       "      <td>51.807944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39994</th>\n",
+       "      <td>20</td>\n",
+       "      <td>z795</td>\n",
+       "      <td>53.280657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39995</th>\n",
+       "      <td>20</td>\n",
+       "      <td>z969</td>\n",
+       "      <td>57.898778</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>39996 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Timepoint Mouse ID  Tumor Volume (mm3)\n",
+       "0             45     k403           22.050126\n",
+       "1             45     s185           23.343598\n",
+       "2             45     x401           28.484033\n",
+       "3             45     m601           28.430964\n",
+       "4             45     g791           29.128472\n",
+       "...          ...      ...                 ...\n",
+       "39991         20     y769           55.025724\n",
+       "39992         20     y865           52.361982\n",
+       "39993         20     z581           51.807944\n",
+       "39994         20     z795           53.280657\n",
+       "39995         20     z969           57.898778\n",
+       "\n",
+       "[39996 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the final tumor volume of each mouse across four of the treatment regimens:  \n",
     "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
     "\n",
     "# Start by getting the last (greatest) timepoint for each mouse\n",
+    "# clean_index\n",
+    "final_tumor_df = clean_index[[\"Mouse ID\", \"Timepoint\"]]\n",
+    "timepoint_df = final_tumor_df.set_index(\"Mouse ID\")\n",
+    "max_timepoints = timepoint_df.groupby(\"Mouse ID\").max()\n",
+    "# max_timepoints_df.columns = [\"Max Timepoint\"]\n",
+    "max_timepoints_df\n",
     "\n",
+    "tumor_volume_table = clean_index[[\"Mouse ID\", \"Timepoint\", \"Tumor Volume (mm3)\"]]\n",
+    "tumor_volume_table\n",
     "\n",
-    "# Merge this group df with the original dataframe to get the tumor volume at the last timepoint\n"
+    "# # Merge this group df with the original dataframe to get the tumor volume at the last timepoint\n",
+    "tumor_max = pd.merge(max_timepoints, tumor_volume_table, on=\"Timepoint\", how=\"inner\")\n",
+    "tumor_max\n"
    ]
   },
   {
@@ -1193,7 +1323,7 @@
     "\n",
     "\n",
     "# Create empty list to fill with tumor vol data (for plotting)\n",
-    "\n",
+    "tumor_vol_data = []\n",
     "\n",
     "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
     "\n",
@@ -1226,11 +1356,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>0</td>\n",
+       "      <td>45.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>5</td>\n",
+       "      <td>43.878496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>10</td>\n",
+       "      <td>37.614948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>15</td>\n",
+       "      <td>38.177232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>20</td>\n",
+       "      <td>36.866876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>45</td>\n",
+       "      <td>47.685963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>0</td>\n",
+       "      <td>45.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>5</td>\n",
+       "      <td>45.597064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>10</td>\n",
+       "      <td>46.059608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>15</td>\n",
+       "      <td>46.539206</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>230 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Timepoint  Tumor Volume (mm3)\n",
+       "Drug Regimen                               \n",
+       "Capomulin             0           45.000000\n",
+       "Capomulin             5           43.878496\n",
+       "Capomulin            10           37.614948\n",
+       "Capomulin            15           38.177232\n",
+       "Capomulin            20           36.866876\n",
+       "...                 ...                 ...\n",
+       "Capomulin            45           47.685963\n",
+       "Capomulin             0           45.000000\n",
+       "Capomulin             5           45.597064\n",
+       "Capomulin            10           46.059608\n",
+       "Capomulin            15           46.539206\n",
+       "\n",
+       "[230 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Generate a line plot of time point versus tumor volume for a mouse treated with Capomulin\n"
+    "# Generate a line plot of time point versus tumor volume for a mouse treated with Capomulin\n",
+    "clean_index\n",
+    "\n",
+    "drug_index = clean_index.set_index(\"Drug Regimen\")\n",
+    "capomulin_data = drug_index.loc[[\"Capomulin\"], :]\n",
+    "cap_data = capomulin_data[[\"Timepoint\", \"Tumor Volume (mm3)\"]]\n",
+    "cap_data"
    ]
   },
   {
